fdo#58949 EmbeddedObjectContainer: guard against embed::WrongStateException

The problem was that in case an exception was thrown, it was only caught
outside the loop, so in case any error occurred, we didn't even try to
export the remaining objects. At least in case of
embed::WrongStateException, this is safe to do.

Change-Id: I71a7abc45a89bebc667664bc001245bb886a8d83